# storage/api-docs/api-docs.json
@@ -820,14 +820,14 @@
                 ]
             }
         },
-        "/advocates/contracts/{id}": {
+        "/advocates/processes/{id}": {
             "put": {
                 "tags": [
-                    "Contract"
+                    "Process"
                 ],
-                "summary": "Atualiza um contrato",
-                "description": "Atualiza um contrato",
-                "operationId": "1775c75ca8553753b7be268da2fce79a",
+                "summary": "Atualiza um processo",
+                "description": "Atualiza um processo",
+                "operationId": "060d543bac97f71cdbd2a813f41f86e2",
                 "parameters": [
                     {
                         "name": "id",
@@ -923,35 +923,6 @@
                         "bearerAuth": []
                     }
                 ]
-            },
-            "delete": {
-                "tags": [
-                    "Contract"
-                ],
-                "summary": "Deleta um contrato",
-                "description": "Deleta um contrato",
-                "operationId": "14a0ce76adcc9120f554aa10a194f04e",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Identificador do contrato",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Deleta um contrato."
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
             }
         },
         "/advocates/contracts/canceled": {
@@ -986,6 +957,37 @@
                 "responses": {
                     "200": {
                         "description": "Contrato cancelado."
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/advocates/contracts/{id}": {
+            "delete": {
+                "tags": [
+                    "Contract"
+                ],
+                "summary": "Deleta um contrato",
+                "description": "Deleta um contrato",
+                "operationId": "14a0ce76adcc9120f554aa10a194f04e",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Identificador do contrato",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Deleta um contrato."
                     }
                 },
                 "security": [
@@ -1070,6 +1072,167 @@
                 "responses": {
                     "200": {
                         "description": "Menus e permissões."
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/advocates/processes": {
+            "post": {
+                "tags": [
+                    "Process"
+                ],
+                "summary": "Cadastra um novo processo",
+                "description": "Cria um novo processo",
+                "operationId": "611b80c986eec1e8fddad72b1cd1d0e1",
+                "parameters": [
+                    {
+                        "name": "file",
+                        "in": "query",
+                        "description": "Identificador do cliente",
+                        "required": true,
+                        "schema": {
+                            "type": "file"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "number": {
+                                        "type": "string",
+                                        "example": "5074276-41.2019.8.13.00152"
+                                    },
+                                    "labor_stick": {
+                                        "type": "string",
+                                        "example": "5 vara do trabalho"
+                                    },
+                                    "petition": {
+                                        "type": "string",
+                                        "example": "Pensão alimenticia"
+                                    },
+                                    "status": {
+                                        "type": "string",
+                                        "example": "Petição inicial"
+                                    },
+                                    "start_date": {
+                                        "type": "string",
+                                        "example": "2021-05-21"
+                                    },
+                                    "end_date": {
+                                        "type": "string",
+                                        "example": "2021-05-21"
+                                    },
+                                    "observations": {
+                                        "type": "string",
+                                        "example": "Observação"
+                                    },
+                                    "client_id": {
+                                        "type": "integer",
+                                        "example": "2"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Processo criado."
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "advocates/processes/{id}": {
+            "put": {
+                "tags": [
+                    "Process"
+                ],
+                "summary": "Atualiza um processo",
+                "description": "Atualiza um processo",
+                "operationId": "30bea301372cd24cbfd2778ae568bac7",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Identificador do processo",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "labor_stick",
+                        "in": "query",
+                        "description": "Vara do trabalho",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "5 vara da familia"
+                    },
+                    {
+                        "name": "petition",
+                        "in": "query",
+                        "description": "Assunto da petição",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "file",
+                        "in": "query",
+                        "description": "Arquivo anexado do processo",
+                        "required": true,
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    {
+                        "name": "start_date",
+                        "in": "query",
+                        "description": "Data de inicio",
+                        "required": false,
+                        "schema": {
+                            "type": "date"
+                        }
+                    },
+                    {
+                        "name": "agency",
+                        "in": "query",
+                        "description": "Data de encerramento",
+                        "required": false,
+                        "schema": {
+                            "type": "date"
+                        }
+                    },
+                    {
+                        "name": "observation",
+                        "in": "query",
+                        "description": "Observações",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Processo atualizado."
                     }
                 },
                 "security": [
